--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
+<!DOCTYPE html>
+<html>
 <head>
-  <style>
-    body {
-      background-color: black;
-    }
-  </style>
+    <title>頁面標題</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-  <!-- 頁面內容 -->
+
+<h1>這是一個主標題</h1>
+<h2>這是一個子標題</h2>
+
+<p>這是一些段落文字，介紹了這個頁面的主要內容。</p>
+
 </body>
+</html>
