--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>頁面標題</title>
+    <title>Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism</title>
     <style>
         body {
             background-color: black;
