--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
             background-color: black;
             color: white;
         }
+        h1 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
