--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         body {
             background-color: black;
             color: white;
+            font-family: 'Microsoft Yahei' !important;
         }
         h1 {
             text-align: center;
