--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
         h1 {
             text-align: center;
         }
+        h2 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
 
 <h1>Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism</h1>
-<h2>這是一個子標題</h2>
+<h2>An example of visual storytelling for the song “Supermarket Flowers” by Ed Sheeran live at the BRIT Awards 2018. </h2>
 
 <p>這是一些段落文字，介紹了這個頁面的主要內容。</p>
 
