--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         }
         h1 {
             text-align: center;
+            color: #00FFFF; /* 水藍色 */
         }
         h2 {
             text-align: center;
