--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             text-align: center;
             color: #00FFFF; /* 水藍色 */
         }
-        h2 {
+        p {
             text-align: center;
         }
     </style>
@@ -20,9 +20,7 @@
 <body>
 
 <h1>Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism</h1>
-<h2>An example of visual storytelling for the song “Supermarket Flowers” by Ed Sheeran live at the BRIT Awards 2018. </h2>
-
-<p>這是一些段落文字，介紹了這個頁面的主要內容。</p>
+<p>An example of visual storytelling for the song “Supermarket Flowers” by Ed Sheeran live at the BRIT Awards 2018. </p>
 
 </body>
 </html>
