--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
         h1 {
             text-align: center;
-            color: #c9f0ef; /* 水藍色 */
+            color: #c1e8e7; /* 水藍色 */
         }
         p {
             text-align: center;
