--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <h1>Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism</h1>
 <p>An example of visual storytelling for the song “Supermarket Flowers” by Ed Sheeran live at the BRIT Awards 2018. </p>
-<video controls>
+<video width="640" height="360" controls>
   <source src="Ed Sheeran - Supermarket Flowers [Live from the BRITs 2018]-cut.mp4" type="video/mp4">
 </video>
 </body>
