--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
     <source src="Ed Sheeran - Supermarket Flowers [Live from the BRITs 2018]-cut" type="video/mp4">
   </video>
 </div>
+
+    <p>The director sequentially uses the XLS, MCU, XLS, and MS to expand the storytelling potential in the beginning of the song.</p>
+
 </body>
 </html>
