--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             text-align: center;
             color: #c1e8e7; /* 水藍色 */
         }
+        h3 {
+            text-align: center;
+            color: #c1e8e7; /* 水藍色 */
+        }
         p {
             text-align: center;
         }
@@ -29,5 +33,7 @@
 
     <p>The director sequentially uses the XLS, MCU, XLS, and MS to expand the storytelling potential in the beginning of the song.</p>
 
+<hr>
+    <h3>Types of Shots</h3>
 </body>
 </html>
