--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
         }
         h1 {
             text-align: center;
-            color: #c1e8e7; /* 水藍色 */
+            color: #aae0ee; /* 水藍色 */
         }
         h3 {
             text-align: center;
-            color: #c1e8e7; /* 水藍色 */
         }
         p {
             text-align: center;
