--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
 
 <hr>
     <h2>Types of Shots</h2>
+    <p>In the language of film, shot (type) is a fundamental element of visual storytelling [1, 2]. The type of shot is defined as how much a target subject and its surrounding area can be seen. Totally, six types of shots are defined, as described in the following Table.</p>
+
 </body>
 </html>
