--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
 <h1>Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism</h1>
 <p>An example of visual storytelling for the song “Supermarket Flowers” by Ed Sheeran live at the BRIT Awards 2018. </p>
-<div style="text-align: center;">
+<!--<div style="text-align: center;">-->
   <video width="640" height="360" controls>
     <source src="Ed Sheeran - Supermarket Flowers [Live from the BRITs 2018]-cut" type="video/mp4">
   </video>
-</div>
+<!--</div>-->
 
     <p>The director sequentially uses the XLS, MCU, XLS, and MS to expand the storytelling potential in the beginning of the song.</p>
 
