--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             text-align: center;
         }
         hr {
-      width: 200px; /* 或者使用百分比，例如 50% */
-      border: 1px solid #000; /* 可選，設定邊框樣式 */
+      width: 75%; /* 或者使用百分比，例如 50% */
+      <!--border: 1px solid #000; /* 可選，設定邊框樣式 */-->
     }
     </style>
 </head>
