--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         }
         p {
             text-align: center;
+            width: 75%;
         }
         hr {
       width: 75%; /* 或者使用百分比，例如 50% */
