--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
         }
         p {
             text-align: center;
-            width: 75%;
         }
         hr {
       width: 75%; /* 或者使用百分比，例如 50% */
       <!--border: 1px solid #000; /* 可選，設定邊框樣式 */-->
     }
+        .example {
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: lightgray;
+    padding: 20px;
+  }
     </style>
 </head>
 <body>
@@ -39,7 +44,8 @@
 
 <hr>
     <h2>Types of Shots</h2>
-    <p>In the language of film, shot (type) is a fundamental element of visual storytelling [1, 2]. The type of shot is defined as how much a target subject and its surrounding area can be seen. Totally, six types of shots are defined, as described in the following Table.</p>
-
+    <div class="example">
+  <p>In the language of film, shot (type) is a fundamental element of visual storytelling [1, 2]. The type of shot is defined as how much a target subject and its surrounding area can be seen. Totally, six types of shots are defined, as described in the following Table.</p>
+    </div>
 </body>
 </html>
