--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h1>Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism</h1>
 <p>An example of visual storytelling for the song “Supermarket Flowers” by Ed Sheeran live at the BRIT Awards 2018. </p>
 <div style="text-align: center;">
-  <video loop="" playsinline="" controls="" width="100%">    
+  <video loop="" playsinline="" controls="">    
     <source src="Ed Sheeran - Supermarket Flowers [Live from the BRITs 2018]-cut" type="video/mp4">
   </video>
 </div>
