--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       In the language of film, shot (type) is a fundamental element of visual storytelling [1, 2]. The type of shot is defined as how much a target subject and its surrounding area can be seen. Totally, six types of shots are defined, as described in the following Table.
     </div>
     <div style="text-align: center;">
-  <img src="storytelling_resize.png">
+  <img src="storytelling_resize.png"  width="800">
 </div>
 </body>
 </html>
