--- a/index.html
+++ b/index.html
@@ -50,5 +50,20 @@
     <div style="text-align: center;">
   <img src="storytelling_resize.png"  width="1200">
 </div>
+
+<hr>
+ 	  <a name="related_work"></a>
+   	<table align=center width=1100px>
+ 	      <tr>
+  	      	<td width=400px>
+ 		           	<left>
+  	   		    	<center><h1>References</h1></center>
+ 		 	   	      <br> [1] D. Andrews. Communications & Multimedia Technology. Digital Overdrive, 2011.</br> 
+			   	    	<br> [2] G. Mercado. The Filmmaker's Eye: Learning (and Breaking) the Rules of Cinematic Composition. Taylor & Francis, 2010.</br>
+                    </left>
+           </td>
+	      </tr>
+  	</table>
+    
 </body>
 </html>
