--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p>An example of visual storytelling for the song “Supermarket Flowers” by Ed Sheeran live at the BRIT Awards 2018. </p>
 <div style="text-align: center;">
   <video width="640" height="360" controls>    
-    <source src="Ed Sheeran - Supermarket Flowers [Live from the BRITs 2018]-cut" type="video/mp4">
+    <source src="Ed Sheeran - Supermarket Flowers [Live from the BRITs 2018]-cut.mp4" type="video/mp4">
   </video>
 </div>
 
