--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h1>Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism</h1>
 
 <div style="text-align: center;">
-  <video width="640" height="360" controls>    
+  <video controls>    
     <source src="Ed Sheeran - Supermarket Flowers [Live from the BRITs 2018]-cut.mp4" type="video/mp4">
   </video>
 </div>
