--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
     <div style="text-align: center;">
   <img src="storytelling_resize.png"  width="1000">
 </div>
+	
+<div class="example">
+      Besides the six types of shots, the audience shot (ADS) and musical instrument shot (MIS) also considered to enrich the visual storytelling in a concert video.
+    </div>
+	
 
 <hr>
  	  <a name="related_work"></a>
