--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
     </div>
 	<br>
 
+	<hr>
+<h2>Music to visual storytelling of shots</h2>
+
+	
 <hr>
  	  <a name="related_work"></a>
    	<table align=center width=1100px>
