--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       Besides the six types of shots, the audience shot (ADS) and musical instrument shot (MIS) also considered to enrich the visual storytelling in a concert video.
     </div>
 	<br>
-
-
-	
+<hr>
+<h2>Proposed Deep Interactive Learning Mechanism</h2>
+<br>	
 <hr>
  	  <a name="related_work"></a>
    	<table align=center width=1100px>
