--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
 	<br>
 <hr>
 <h2>Proposed Deep Interactive Learning Mechanism</h2>
-<br>	
+<div class="example">
+	In this study, we present a deep interactive learning (DIL) mechanism for building a compact yet accurate sequence-to-sequence model to achieve the music to visual storytelling of shots translation. 
+
+Different from the one-way transfer between a pre-trained teacher network (or ensemble network) and a student network in knowledge distillation (KD) [3], the proposed DIL mechanism enables collaborative learning between an ensemble teacher network and a student network. Namely, the student network also teaches.
+
+In the proposed DIL mechanism, learning comes from two aspects: teacher-to-student and student-to-teacher. 
+Regarding teacher-to-student learning, the process starts with a powerful pre-trained teacher network, MF-RNNs with film-language [4], and then performs knowledge transfer to a student network (lightweight RNN) through KD. 
+</div>
+	<br>	
 <hr>
  	  <a name="related_work"></a>
    	<table align=center width=1100px>
@@ -70,8 +78,10 @@
   	      	<td width=400px>
  		           	<left>
   	   		    	<center><h2>References</h2></center>
- 		 	   	      <br> [1] D. Andrews. Communications & Multimedia Technology. Digital Overdrive, 2011.</br> 
-			   	    	<br> [2] G. Mercado. The Filmmaker's Eye: Learning (and Breaking) the Rules of Cinematic Composition. Taylor & Francis, 2010.</br>
+ 		 	   	      <br> [1] D. Andrews. Communications & Multimedia Technology. Digital Overdrive, 2011. 
+			   	    	 [2] G. Mercado. The Filmmaker's Eye: Learning (and Breaking) the Rules of Cinematic Composition. Taylor & Francis, 2010.
+					 [3] G. E. Hinton, O. Vinyals, and J. Dean, Distilling the knowledge in a neural network, In NeurIPS Workshop, 2015.
+				[4] W.-L. Wei, J.-C. Lin, T.-L. Liu, Y.-H. Yang, H.-M. Wang, H.-R. Tyan, and H.-Y. Liao, Seethevoice: Learning from music to visual storytelling of shots, ICME, 2018.</br>
                     </left>
            </td>
 	      </tr>
