--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             text-align: center;
 		color: #e6eced;
         }
+        h3 {
+            text-align: center;
+        }
         p {
             text-align: center;
         }
@@ -33,6 +36,9 @@
 <body>
 
 <h1>Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism</h1>
+	<br>
+	<h3>Jen-Chun Lin, Wen-Li Wei, Yen-Yu Lin, Tyng-Luh Liu, Hong-Yuan Mark Liao</h3>
+	<br>
 	
 	<hr>
 <h2>Music to visual storytelling of shots</h2>
