--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Different from the one-way transfer between a pre-trained teacher network (or en
 <br>
 In the proposed DIL mechanism, learning comes from two aspects: teacher-to-student and student-to-teacher. 
 	<br>
-Regarding teacher-to-student learning, the process starts with a powerful pre-trained teacher network, MF-RNNs with film-language [4], and then performs knowledge transfer to a student network (lightweight RNN) through KD. 
+Regarding <font color="yellow">teacher-to-student</font> learning, the process starts with a powerful pre-trained teacher network, MF-RNNs with film-language [4], and then performs knowledge transfer to a student network (lightweight RNN) through KD. 
 </div>
 	<br>	
 <hr>
