--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
 </br>
 <br>In the proposed DIL mechanism, learning comes from two aspects: teacher-to-student and student-to-teacher. 
 	</br>
-Regarding <font color="yellow">teacher-to-student</font> learning, the process starts with a powerful pre-trained teacher network, MF-RNNs with film-language [4], and then performs knowledge transfer to a student network (lightweight RNN) through KD. 
+<br>Regarding <font color="yellow">teacher-to-student</font> learning, the process starts with a powerful pre-trained teacher network, MF-RNNs with film-language [4], and then performs knowledge transfer to a student network (lightweight RNN) through KD.</br>
+<img src="storytelling_resize.png"  width="1000">
 </div>
+
 	<br>	
 <hr>
  	  <a name="related_work"></a>
