--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 	<br>In <font color="yellow">student-to-teacher</font> learning, we turn to distill the knowledge (soft target distribution) from the student network and then transfer the knowledge to each of assistant networks (temporal resolution RNNs) integrated in the teacher network, thereby upgrading the teacher network.</br>
 <br><div style="text-align: center;"><img src="stu2tch.png" width="1000"></div></br>
 
+	<br>Thus, repeating such a DIL mechanism gradually improves the performance of both student and teacher networks.</br>
+
+<br>After training, the student network is finally used to achieve the music to visual storytelling of shots translation.</br>
 </div>
 
 	<br>	
