--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 <p>An example of visual storytelling for the song “Supermarket Flowers” by Ed Sheeran live at the BRIT Awards 2018. </p>
     <p>The director sequentially uses the XLS, MCU, XLS, and MS to expand the storytelling potential in the beginning of the song.</p>
 <br>
+	<div style="text-align: center;">
+  <img src="storytelling_resize.png"  width="1000">
+</div>
+	<br>
 <hr>
     <h2>Types of Shots</h2>
     <div class="example">
