--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
     
     <div style="text-align: center;">
-  <img src="storytelling_resize.png"  width="1000">
+  <img src="icme2TMM_table1.png"  width="1000">
 </div>
 	
 <div class="example">
