--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
 	<br>	
 	<hr>
 <h2>Demo</h2>
+	<br>Subjective evaluation in terms of 5-point mean opinion score (MOS) is conducted on three concert video sets. For a concert video set, each concert video is generated from multiple audience recordings that under the guidance of official shot type sequence and the shot type sequences translated from lightweight RNN-DIL, MF-RNNs-DIL, lightweight RNN-KD [1], and MF-RNNs (with film-language) [2], respectively.</br>
+
+<br>Three indicators are considered for evaluation: (1) Does the frequency of shot switching match the music? (2) Does the timing of cut point match the music? (3) Overall, does the visual storytelling of shots match the music?</br>
+
+<br>For each figure, the vertical and horizontal axes represent the number of people and MOS score (from bad to excellent), respectively.</br>
+	<br>
+	<hr>
+<h2>Demo</h2>
 	<br>
 <hr>
  	  <a name="related_work"></a>
