--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
 	<br>
 	<hr>
 <h2>Demo</h2>
+	<div style="text-align: center;">
+  <video controls>    
+    <source src="Demo-small.mp4" type="video/mp4">
+  </video>
+</div>
 	<br>
 <hr>
  	  <a name="related_work"></a>
