--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
 <br>Three indicators are considered for evaluation: (1) Does the frequency of shot switching match the music? (2) Does the timing of cut point match the music? (3) Overall, does the visual storytelling of shots match the music?</br>
 
 <br>For each figure, the vertical and horizontal axes represent the number of people and MOS score (from bad to excellent), respectively.</br>
+		 <video controls>    
+    <source src="CC-Net-test-1-7mashup.mp4" type="video/mp4">
+  </video>
+		<img src="adele-CCNet-1.png">
+		<img src="adele-CCNet-2.png">
+		<img src="adele-CCNet-3.png">
 	</div>
 	<br>
 	<hr>
