--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <br>For each figure, the vertical and horizontal axes represent the number of people and MOS score (from bad to excellent), respectively.</br>
 		 <video controls>    
-    <source src="CC-Net-test-1-7mashup.mp4" type="video/mp4">
+    <source src="CC-Net-test-1-7mashup.mp4" type="video/mp4" height="173">
   </video>
 		<img src="adele-CCNet-1.png">
 		<img src="adele-CCNet-2.png">
