--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     margin: 0 auto;
     padding: 20px;
   }
+	    .blue-background {
+            background-color: blue;
+            color: white;
+            padding: 20px; /* 添加一些內邊距 */
+        }
     </style>
 </head>
 <body>
@@ -100,6 +105,9 @@
 <br>Three indicators are considered for evaluation: (1) Does the frequency of shot switching match the music? (2) Does the timing of cut point match the music? (3) Overall, does the visual storytelling of shots match the music?</br>
 
 <br>For each figure, the vertical and horizontal axes represent the number of people and MOS score (from bad to excellent), respectively.</br>
+		<div class="blue-background">
+    <p>Official</p>
+</div>
 		 <video controls>    
     <source src="CC-Net-test-1-7mashup.mp4" type="video/mp4" height="173">
   </video>
