--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 		<div class="blue-background">
     <p>Official</p>
 </div>
-		 <video controls>    
-    <source src="CC-Net-test-1-7mashup.mp4" type="video/mp4" height="173">
+		 <video controls height="173">    
+    <source src="CC-Net-test-1-7mashup.mp4" type="video/mp4">
   </video>
 		<img src="adele-CCNet-1.png">
 		<img src="adele-CCNet-2.png">
