--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <br>For each figure, the vertical and horizontal axes represent the number of people and MOS score (from bad to excellent), respectively.</br>
 		<div class="blue-background">
-    <p>Official</p>
+    <left><p class="blue-background"> Official</p></left>
 </div>
 		 <video controls height="173">    
     <source src="CC-Net-test-1-7mashup.mp4" type="video/mp4">
