--- a/index.html
+++ b/index.html
@@ -107,13 +107,19 @@
 		<div class="blue-background">
     <left><p class="blue-background"> Official</p></left>
 </div>
-		 <video controls height="200">    
+		 <video controls height="190">    
     <source src="CC-Net-test-1-7mashup.mp4" type="video/mp4">
   </video>
 		<img src="adele-CCNet-1.png">
 		<img src="adele-CCNet-2.png">
 		<img src="adele-CCNet-3.png">
-	
+		
+	<video controls height="190">    
+    <source src="Student-DIL-test-1-7mashup.mp4" type="video/mp4">
+  </video>
+		<img src="adele-S-DIL-1.png">
+		<img src="adele-S-DIL-2.png">
+		<img src="adele-S-DIL-3.png">
 	<br>
 	<hr>
 <h2>Demo</h2>
