--- a/index.html
+++ b/index.html
@@ -105,15 +105,18 @@
 
 <br>For each figure, the vertical and horizontal axes represent the number of people and MOS score (from bad to excellent), respectively.</br>
 		<div class="blue-background">
-    <left><p class="blue-background"> Official</p></left>
+    
 </div>
+		<left><p class="blue-background"> Official</p></left>
 		 <video controls height="190">    
     <source src="CC-Net-test-1-7mashup.mp4" type="video/mp4">
   </video>
 		<img src="adele-CCNet-1.png">
 		<img src="adele-CCNet-2.png">
 		<img src="adele-CCNet-3.png">
-		
+
+		<left><p class="blue-background"> Lightweight RNN-DIL
+</p></left>
 	<video controls height="190">    
     <source src="Student-DIL-test-1-7mashup.mp4" type="video/mp4">
   </video>
