--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
 		<img src="adele-S-DIL-1.png">
 		<img src="adele-S-DIL-2.png">
 		<img src="adele-S-DIL-3.png">
+
+		<left><p class="blue-background"> MF-RNNs-DIL
+</p></left>
+	<video controls height="190">    
+    <source src="TeacherNet-DIL-test-1-7mashup.mp4" type="video/mp4">
+  </video>
+		<img src="adele-T-DIL-1.png">
+		<img src="adele-T-DIL-2.png">
+		<img src="adele-T-DIL-3.png">
 	<br>
 	<hr>
 <h2>Demo</h2>
