--- a/index.html
+++ b/index.html
@@ -141,6 +141,17 @@
 		<img src="adele-KD-DIL-1.png">
 		<img src="adele-KD-DIL-2.png">
 		<img src="adele-KD-DIL-3.png">
+
+<left><p class="blue-background"> MF-RNNs (with film-language) [2]
+</p></left>
+	<video controls height="190">    
+    <source src="TeacherNet-test-1-7mashup.mp4" type="video/mp4">
+  </video>
+		<img src="adele-teacher-DIL-1.png">
+		<img src="adele-teacher-DIL-2.png">
+		<img src="adele-teacher-DIL-3.png">
+		
+
 	<br>
 	<hr>
 <h2>Demo</h2>
