--- a/index.html
+++ b/index.html
@@ -138,18 +138,18 @@
 	<video controls height="190">    
     <source src="Student-KD-test-1-7mashup.mp4" type="video/mp4">
   </video>
-		<img src="adele-KD-DIL-1.png">
-		<img src="adele-KD-DIL-2.png">
-		<img src="adele-KD-DIL-3.png">
+		<img src="adele-KD-1.png">
+		<img src="adele-KD-2.png">
+		<img src="adele-KD-3.png">
 
 <left><p class="blue-background"> MF-RNNs (with film-language) [2]
 </p></left>
 	<video controls height="190">    
     <source src="TeacherNet-test-1-7mashup.mp4" type="video/mp4">
   </video>
-		<img src="adele-teacher-DIL-1.png">
-		<img src="adele-teacher-DIL-2.png">
-		<img src="adele-teacher-DIL-3.png">
+		<img src="adele-teacher-1.png">
+		<img src="adele-teacher-2.png">
+		<img src="adele-teacher-3.png">
 		
 
 	<br>
