--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             background-color: blue;
             color: white;
         }
+	    .red-background {
+            background-color: red;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -151,7 +155,14 @@
 		<img src="adele-teacher-2.png">
 		<img src="adele-teacher-3.png">
 		
-
+<left><p class="red-background"> Official
+</p></left>
+	<video controls height="190">    
+    <source src="EdSheeran-official.mp4" type="video/mp4">
+  </video>
+		<img src="ed-official-1.png">
+		<img src="ed-official-2.png">
+		<img src="ed-official-3.png">
 	<br>
 	<hr>
 <h2>Demo</h2>
