--- a/index.html
+++ b/index.html
@@ -163,6 +163,17 @@
 		<img src="ed-official-1.png">
 		<img src="ed-official-2.png">
 		<img src="ed-official-3.png">
+
+<left><p class="red-background"> Lightweight RNN-DIL
+</p></left>
+	<video controls height="190">    
+    <source src="EdSheeran-StudentDIL.mp4" type="video/mp4">
+  </video>
+		<img src="ed-S-DIL-1.png">
+		<img src="ed-S-DIL-2.png">
+		<img src="ed-S-DIL-3.png">
+		
+
 	<br>
 	<hr>
 <h2>Demo</h2>
