--- a/index.html
+++ b/index.html
@@ -173,7 +173,14 @@
 		<img src="ed-S-DIL-2.png">
 		<img src="ed-S-DIL-3.png">
 		
-
+<left><p class="red-background"> MF-RNNs-DIL
+</p></left>
+	<video controls height="190">    
+    <source src="EdSheeran-TeacherDIL.mp4" type="video/mp4">
+  </video>
+		<img src="ed-T-DIL-1.png">
+		<img src="ed-T-DIL-2.png">
+		<img src="ed-T-DIL-3.png">
 	<br>
 	<hr>
 <h2>Demo</h2>
