--- a/index.html
+++ b/index.html
@@ -181,6 +181,17 @@
 		<img src="ed-T-DIL-1.png">
 		<img src="ed-T-DIL-2.png">
 		<img src="ed-T-DIL-3.png">
+
+		<left><p class="red-background"> Lightweight-RNN-KD [1]
+</p></left>
+	<video controls height="190">    
+    <source src="EdSheeran-KD.mp4" type="video/mp4">
+  </video>
+		<img src="ed-KD-1.png">
+		<img src="ed-KD-2.png">
+		<img src="ed-KD-3.png">
+		
+
 	<br>
 	<hr>
 <h2>Demo</h2>
