--- a/index.html
+++ b/index.html
@@ -191,7 +191,14 @@
 		<img src="ed-KD-2.png">
 		<img src="ed-KD-3.png">
 		
-
+<left><p class="red-background"> MF-RNNs (with film-language) [2]
+</p></left>
+	<video controls height="190">    
+    <source src="EdSheeran-Teacher.mp4" type="video/mp4">
+  </video>
+		<img src="ed-teacher-1.png">
+		<img src="ed-teacher-2.png">
+		<img src="ed-teacher-3.png">
 	<br>
 	<hr>
 <h2>Demo</h2>
