--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
 		<img src="ed-teacher-1.png">
 		<img src="ed-teacher-2.png">
 		<img src="ed-teacher-3.png">
+
+		<left><p class="red-background"> Official
+</p></left>
+	<video controls height="190">    
+    <source src="Anne-official.mp4" type="video/mp4">
+  </video>
+		<img src="anne-official-1.png">
+		<img src="anne-official-2.png">
+		<img src="anne-official-3.png">
 	<br>
 	<hr>
 <h2>Demo</h2>
