--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             background-color: red;
             color: white;
         }
+	    .green-background {
+            background-color: red;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -200,7 +204,7 @@
 		<img src="ed-teacher-2.png">
 		<img src="ed-teacher-3.png">
 
-		<left><p class="red-background"> Official
+		<left><p class="green-background"> Official
 </p></left>
 	<video controls height="190">    
     <source src="Anne-official.mp4" type="video/mp4">
