--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             color: white;
         }
 	    .green-background {
-            background-color: red;
+            background-color: green;
             color: white;
         }
     </style>
