--- a/index.html
+++ b/index.html
@@ -212,6 +212,17 @@
 		<img src="anne-official-1.png">
 		<img src="anne-official-2.png">
 		<img src="anne-official-3.png">
+		
+<left><p class="green-background"> Lightweight RNN-DIL
+</p></left>
+	<video controls height="190">    
+    <source src="Anne-StudentDIL.mp4" type="video/mp4">
+  </video>
+		<img src="anne-S-DIL-1.png">
+		<img src="anne-S-DIL-2.png">
+		<img src="anne-S-DIL-3.png">
+		
+
 	<br>
 	<hr>
 <h2>Demo</h2>
