--- a/index.html
+++ b/index.html
@@ -222,7 +222,15 @@
 		<img src="anne-S-DIL-2.png">
 		<img src="anne-S-DIL-3.png">
 		
-
+<left><p class="green-background"> MF-RNNs-DIL
+</p></left>
+	<video controls height="190">    
+    <source src="Anne-TeacherDIL.mp4" type="video/mp4">
+  </video>
+		<img src="anne-T-DIL-1.png">
+		<img src="anne-T-DIL-2.png">
+		<img src="anne-T-DIL-3.png">
+		
 	<br>
 	<hr>
 <h2>Demo</h2>
