--- a/index.html
+++ b/index.html
@@ -230,6 +230,15 @@
 		<img src="anne-T-DIL-1.png">
 		<img src="anne-T-DIL-2.png">
 		<img src="anne-T-DIL-3.png">
+
+		<left><p class="green-background"> Lightweight-RNN-KD [3]
+</p></left>
+	<video controls height="190">    
+    <source src="Anne-KD.mp4" type="video/mp4">
+  </video>
+		<img src="anne-KD-1.png">
+		<img src="anne-KD-2.png">
+		<img src="anne-KD-3.png">
 		
 	<br>
 	<hr>
