--- a/index.html
+++ b/index.html
@@ -239,7 +239,17 @@
 		<img src="anne-KD-1.png">
 		<img src="anne-KD-2.png">
 		<img src="anne-KD-3.png">
+
+<left><p class="green-background"> MF-RNNs (with film-language) [4]
+</p></left>
+	<video controls height="190">    
+    <source src="Anne-Teacher.mp4" type="video/mp4">
+  </video>
+		<img src="anne-teacher-1.png">
+		<img src="anne-teacher-2.png">
+		<img src="anne-teacher-3.png">
 		
+
 	<br>
 	<hr>
 <h2>Demo</h2>
