--- a/index.html
+++ b/index.html
@@ -262,19 +262,19 @@
 
 	<br>
 		Source videos:
- - Singer 1:  https://www.youtube.com/watch?v=Rrrrbyqba7g
+ <br>- Singer 1:  https://www.youtube.com/watch?v=Rrrrbyqba7g
                    https://www.youtube.com/watch?v=37D0f2yPaHQ
                        https://www.youtube.com/watch?v=ZZrkukQeJo0
                        https://www.youtube.com/watch?v=3FlRdpSqvQs
                        https://www.youtube.com/watch?v=J3obY-TYrX8
 
- - Singer 2: https://www.youtube.com/watch?v=cJQBbYj_I0o
+ <br>- Singer 2: https://www.youtube.com/watch?v=cJQBbYj_I0o
                   https://www.youtube.com/watch?v=UL05gjS_i6k
                       https://www.youtube.com/watch?v=FCCZ_PNBpaY
                       https://www.youtube.com/watch?v=ImiMlzPVuPQ
                       https://www.youtube.com/watch?v=HxhEVKihrtI
 
- - Singer 3: https://www.youtube.com/watch?v=HYzFS6WCFdw
+<br> - Singer 3: https://www.youtube.com/watch?v=HYzFS6WCFdw
                       https://www.youtube.com/watch?v=KOTkYnrnLmU
                       https://www.youtube.com/watch?v=MrGgBoBmw2A
                       https://www.youtube.com/watch?v=AqTMgutbd9w
