--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <h1>Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism</h1>
 	<br>
-	<h3>Jen-Chun Lin, Wen-Li Wei, Yen-Yu Lin, Tyng-Luh Liu, Hong-Yuan Mark Liao</h3>	
+	<h3>Jen-Chun Lin, Wen-Li Wei, Yen-Yu Lin, Tyng-Luh Liu, and Hong-Yuan Mark Liao</h3>	
 <h3>Institute of Information Science, Academia Sinica, Taiwan</h3>
 	<h3>ACM Multimedia 2020</h3>
 	<br>
