--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
     </style>
 </head>
 <body>
-
+	
 <h1>Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism</h1>
 	<br>
-	<h3>Jen-Chun Lin, Wen-Li Wei, Yen-Yu Lin, Tyng-Luh Liu, and Hong-Yuan Mark Liao</h3>	
-<h3>Institute of Information Science, Academia Sinica, Taiwan</h3>
+	<h3>Jen-Chun Lin<sup>1</sup>, Wen-Li Wei<sup>1</sup>, Yen-Yu Lin<sup>2</sup>, Tyng-Luh Liu<sup>1</sup>, and Hong-Yuan Mark Liao<sup>1,3</sup></h3>	
+<h3><sup>1</sup>Institute of Information Science, Academia Sinica, Taiwan</h3>
+	<h3><sup>2</sup>Department of Computer Science, National Chiao Tung University, Taiwan</h3>
+	<h3><sup>3</sup>Department of Computer Science and Information Engineering, Providence University, Taiwan</h3>
 	<h3>ACM Multimedia 2020</h3>
 	<br>
 	<div style="text-align: center;">
