--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
 	<h3><sup>2</sup>Department of Computer Science, National Chiao Tung University, Taiwan</h3>
 	<h3><sup>3</sup>Department of Computer Science and Information Engineering, Providence University, Taiwan</h3>
 	<h3>ACM Multimedia 2020</h3>
+<br>
+<div>
+            <a href="./Paper.pdf">
+              <img src="./paper.png" /></a>
+          </div>	
 	<br>
 	<div style="text-align: center;">
   <video controls>    
