--- a/index.html
+++ b/index.html
@@ -314,6 +314,18 @@
            </td>
 	      </tr>
   	</table>
-    
+
+<div class="bibtex">
+            <pre><code>@article{LearningFromMusic2020,
+    author = {Jen-Chun Lin, Wen-Li Wei, Yen-Yu Lin, Tyng-Luh Liu, and Hong-Yuan Mark Liao},
+    title = {Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism},
+    journal = {ACM Multimedia (ACM MM)},
+    volume = {},
+    number = {},
+    year = {2020},
+    publisher = {ACM}
+  }</code></pre>
+          </div>
+		
 </body>
 </html>
