--- a/index.html
+++ b/index.html
@@ -316,14 +316,12 @@
   	</table>
 
 <div class="bibtex">
-            <pre><code>@article{LearningFromMusic2020,
-    author = {Jen-Chun Lin, Wen-Li Wei, Yen-Yu Lin, Tyng-Luh Liu, and Hong-Yuan Mark Liao},
-    title = {Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism},
-    journal = {ACM Multimedia (ACM MM)},
-    volume = {},
-    number = {},
-    year = {2020},
-    publisher = {ACM}
+            <pre><code>@inproceedings{LinMM20,
+    author = {Lin, Jen-Chun and Wei, Wen-Li and Lin, Yen-Yu and Liu, Tyng-Luh and Liao, Hong-Yuan Mark},
+title = {Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism},
+year = {2020},
+booktitle = {Proceedings of the 28th ACM International Conference on Multimedia},
+pages = {102–110},
   }</code></pre>
           </div>
 		
