--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<h3>ACM Multimedia 2020</h3>
 <br>
 <div>
-            <a href="./Paper.pdf">
+            <a href="./mm-lin20.pdf">
               <img src="./paper.png" /></a>
           </div>	
 	<br>
