--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <br>
 <div>
             <a href="./mm-lin20.pdf">
-              <img src="./paper.png" /></a>
+              <center><img src="./paper.png" /></a></center>
           </div>	
 	<br>
 	<div style="text-align: center;">
