--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 	<h3>ACM Multimedia 2020</h3>
 <br>
 <div>
-            <a href="./mm-lin20.pdf">
-              <center><img src="./paper.png" /></a></center>
+            <center><a href="./mm-lin20.pdf">
+              <img src="./paper.png" /></a></center>
           </div>	
 	<br>
 	<div style="text-align: center;">
