--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
 	<h3><sup>3</sup>Department of Computer Science and Information Engineering, Providence University, Taiwan</h3>
 	<h3>ACM Multimedia 2020</h3>
 <br>
-<div>
-            <center><a href="./mm-lin20.pdf">
-              <img src="./paper.png" /></a></center>
-          </div>	
+<div style="text-align: center;">
+  <a href="./mm-lin20.pdf">
+    <img src="./paper.png" alt="Paper">
+  </a>
+</div>	
 	<br>
 	<div style="text-align: center;">
   <video controls>    
