--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <br>
 <div style="text-align: center;">
   <a href="./mm-lin20.pdf">
-    <img src="./paper.png" alt="Paper">
+    <img src="./paper.png" alt="Paper" style="width: 50%;">
   </a>
 </div>	
 	<br>
