--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             background-color: green;
             color: white;
         }
+	    .bibtex {
+      font-size: 16px;
+    }
     </style>
 </head>
 <body>
@@ -319,10 +322,10 @@
 <div class="bibtex">
             <pre><code>@inproceedings{LinMM20,
     author = {Lin, Jen-Chun and Wei, Wen-Li and Lin, Yen-Yu and Liu, Tyng-Luh and Liao, Hong-Yuan Mark},
-title = {Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism},
-year = {2020},
-booktitle = {Proceedings of the 28th ACM International Conference on Multimedia},
-pages = {102–110},
+    title = {Learning From Music to Visual Storytelling of Shots: A Deep Interactive Learning Mechanism},
+    year = {2020},
+    booktitle = {Proceedings of the 28th ACM International Conference on Multimedia},
+    pages = {102–110},
   }</code></pre>
           </div>
 		
