--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
   	</table>
 		<br>
 <hr>
-		<h2>Demo</h2>
+		<h2>BibTeX</h2>
 <div class="bibtex">
             <pre><code>@inproceedings{LinMM20,
     author = {Lin, Jen-Chun and Wei, Wen-Li and Lin, Yen-Yu and Liu, Tyng-Luh and Liao, Hong-Yuan Mark},
@@ -328,7 +328,7 @@
     year = {2020},
     booktitle = {Proceedings of the 28th ACM International Conference on Multimedia},
     pages = {102–110},
-  }</code></pre>
+}</code></pre>
           </div>
 		
 </body>
