--- a/index.html
+++ b/index.html
@@ -304,7 +304,13 @@
 </div>
 	<br>-->
 <hr>
- 	  <a name="related_work"></a>
+		<h2>References</h2>
+		<br> [1] D. Andrews. Communications & Multimedia Technology. Digital Overdrive, 2011. 
+			   	    	<br> [2] G. Mercado. The Filmmaker's Eye: Learning (and Breaking) the Rules of Cinematic Composition. Taylor & Francis, 2010.
+					<br> [3] G. E. Hinton, O. Vinyals, and J. Dean, Distilling the knowledge in a neural network, In NeurIPS Workshop, 2015.
+				<br>[4] W.-L. Wei, J.-C. Lin, T.-L. Liu, Y.-H. Yang, H.-M. Wang, H.-R. Tyan, and H.-Y. Liao, Seethevoice: Learning from music to visual storytelling of shots, ICME, 2018.</br>
+                    
+ 	  <!--<a name="related_work"></a>
    	<table align=center width=1100px>
  	      <tr>
   	      	<td width=400px>
@@ -317,7 +323,7 @@
                     </left>
            </td>
 	      </tr>
-  	</table>
+  	</table>-->
 		<br>
 <hr>
 		<h2>BibTeX</h2>
